Enhance internationalization support for health tracking features
- Updated English, Spanish, and French language files to include new keys for blood pressure tracking, symptom logging, and contraction timing.
- Improved placeholder texts and descriptions for better user guidance across all supported languages.
- Ensured consistency in terminology and phrasing to enhance user experience in health tracking functionalities.

--- a/bumpbuddy/src/i18n/languages/es.json
+++ b/bumpbuddy/src/i18n/languages/es.json
@@ -138,6 +138,87 @@
     "safe": "Seguro",
     "caution": "Precaución"
   },
+  "health": {
+    "title": "Seguimiento de Salud",
+    "dailySymptoms": "Síntomas Diarios",
+    "symptomsDescription": "Haz un seguimiento de tus síntomas del embarazo y su gravedad",
+    "kickCounter": "Contador de Patadas",
+    "kickCounterDescription": "Sigue los movimientos de tu bebé",
+    "kicks": "Patadas",
+    "time": "Tiempo",
+    "recordKick": "Registrar Patada",
+    "startCounting": "Empezar a Contar",
+    "endSession": "Finalizar Sesión",
+    "severityLabel": "Gravedad (1-5)",
+    "notesLabel": "Notas",
+    "notesPlaceholder": "Añade cualquier nota aquí...",
+    "removeSymptom": "Eliminar Síntoma",
+    "confirmRemoveSymptom": "¿Estás segura de que quieres eliminar este síntoma?",
+    "endKickSession": "Finalizar Sesión de Conteo de Patadas",
+    "kickSessionSummary": "Has registrado {{count}} patadas en {{time}}",
+    "kickNotesPlaceholder": "Añade cualquier nota sobre esta sesión de conteo de patadas...",
+    "severity": "Gravedad",
+    "symptoms": {
+      "nausea": "Náuseas",
+      "fatigue": "Fatiga",
+      "headache": "Dolor de cabeza",
+      "backache": "Dolor de espalda",
+      "swelling": "Hinchazón",
+      "heartburn": "Acidez"
+    },
+    "symptomsDesc": {
+      "nausea": "Náuseas matutinas o generales",
+      "fatigue": "Sensación de cansancio inusual",
+      "headache": "Dolor o presión en la cabeza",
+      "backache": "Dolor en la parte baja o alta de la espalda",
+      "swelling": "Hinchazón en pies, tobillos o manos",
+      "heartburn": "Sensación de ardor en el pecho"
+    },
+    "weightTracker": "Seguimiento de Peso",
+    "weightTrackerDescription": "Monitoriza tu peso durante el embarazo",
+    "addWeight": "Añadir Peso",
+    "currentWeight": "Peso Actual",
+    "weightHistory": "Historial de Peso",
+    "date": "Fecha",
+    "weight": "Peso",
+    "weightPlaceholder": "Introduce el peso (kg)",
+    "weightNotesPlaceholder": "Añade cualquier nota sobre esta medición de peso...",
+    "noWeightData": "No se encontraron registros de peso. Empieza a hacer un seguimiento de tu peso hoy.",
+    "invalidWeightValue": "Por favor, introduce un valor de peso válido",
+    "bloodPressure": "Presión Arterial",
+    "bloodPressureDescription": "Monitoriza tu presión arterial durante el embarazo",
+    "currentBloodPressure": "Presión Arterial Actual",
+    "addBloodPressure": "Añadir Presión Arterial",
+    "editBloodPressure": "Editar Presión Arterial",
+    "deleteBloodPressure": "Eliminar Presión Arterial",
+    "confirmDeleteBloodPressure": "¿Estás segura de que quieres eliminar este registro de presión arterial?",
+    "noBloodPressureData": "No se encontraron registros de presión arterial. Empieza a hacer un seguimiento de tu presión arterial hoy.",
+    "systolic": "Sistólica",
+    "diastolic": "Diastólica",
+    "pulse": "Pulso",
+    "position": "Posición",
+    "arm": "Brazo",
+    "systolicPlaceholder": "Introduce el valor sistólico",
+    "diastolicPlaceholder": "Introduce el valor diastólico",
+    "pulsePlaceholder": "Introduce la frecuencia del pulso (opcional)",
+    "invalidBloodPressureValues": "Por favor, introduce valores sistólicos y diastólicos válidos",
+    "history": "Historial",
+    "positions": {
+      "sitting": "Sentada",
+      "standing": "De pie",
+      "lying": "Acostada"
+    },
+    "arms": {
+      "left": "Izquierdo",
+      "right": "Derecho"
+    },
+    "contractionTimer": "Temporizador de Contracciones",
+    "contractionTimerDescription": "Haz un seguimiento del tiempo de tus contracciones",
+    "startContraction": "Iniciar Contracción",
+    "endContraction": "Finalizar Contracción",
+    "contractionInProgress": "Contracción en progreso",
+    "readyToStart": "Listo para empezar"
+  },
   "healthTracker": {
     "title": "Seguimiento de Salud",
     "symptomsTitle": "Seguimiento de Síntomas",
