--- a/bumpbuddy/src/i18n/languages/fr.json
+++ b/bumpbuddy/src/i18n/languages/fr.json
@@ -138,6 +138,87 @@
     "safe": "Sûr",
     "caution": "Précaution"
   },
+  "health": {
+    "title": "Suivi de Santé",
+    "dailySymptoms": "Symptômes Quotidiens",
+    "symptomsDescription": "Suivez vos symptômes de grossesse et leur intensité",
+    "kickCounter": "Compteur de Mouvements",
+    "kickCounterDescription": "Suivez les mouvements de votre bébé",
+    "kicks": "Mouvements",
+    "time": "Temps",
+    "recordKick": "Enregistrer un Mouvement",
+    "startCounting": "Commencer à Compter",
+    "endSession": "Terminer la Session",
+    "severityLabel": "Intensité (1-5)",
+    "notesLabel": "Notes",
+    "notesPlaceholder": "Ajoutez des notes ici...",
+    "removeSymptom": "Supprimer le Symptôme",
+    "confirmRemoveSymptom": "Êtes-vous sûr de vouloir supprimer ce symptôme ?",
+    "endKickSession": "Terminer la Session de Comptage",
+    "kickSessionSummary": "Vous avez enregistré {{count}} mouvements en {{time}}",
+    "kickNotesPlaceholder": "Ajoutez des notes sur cette session de comptage...",
+    "severity": "Intensité",
+    "symptoms": {
+      "nausea": "Nausée",
+      "fatigue": "Fatigue",
+      "headache": "Maux de tête",
+      "backache": "Douleurs dorsales",
+      "swelling": "Gonflement",
+      "heartburn": "Brûlures d'estomac"
+    },
+    "symptomsDesc": {
+      "nausea": "Nausées matinales ou générales",
+      "fatigue": "Sensation de fatigue inhabituelle",
+      "headache": "Douleur ou pression dans la tête",
+      "backache": "Douleur au bas ou haut du dos",
+      "swelling": "Gonflement aux pieds, chevilles ou mains",
+      "heartburn": "Sensation de brûlure dans la poitrine"
+    },
+    "weightTracker": "Suivi de Poids",
+    "weightTrackerDescription": "Suivez votre poids tout au long de la grossesse",
+    "addWeight": "Ajouter un Poids",
+    "currentWeight": "Poids Actuel",
+    "weightHistory": "Historique de Poids",
+    "date": "Date",
+    "weight": "Poids",
+    "weightPlaceholder": "Entrez le poids (kg)",
+    "weightNotesPlaceholder": "Ajoutez des notes sur cette mesure de poids...",
+    "noWeightData": "Aucun enregistrement de poids trouvé. Commencez à suivre votre poids aujourd'hui.",
+    "invalidWeightValue": "Veuillez entrer une valeur de poids valide",
+    "bloodPressure": "Tension Artérielle",
+    "bloodPressureDescription": "Suivez votre tension artérielle pendant la grossesse",
+    "currentBloodPressure": "Tension Artérielle Actuelle",
+    "addBloodPressure": "Ajouter une Tension",
+    "editBloodPressure": "Modifier la Tension",
+    "deleteBloodPressure": "Supprimer la Tension",
+    "confirmDeleteBloodPressure": "Êtes-vous sûr de vouloir supprimer cet enregistrement de tension ?",
+    "noBloodPressureData": "Aucun enregistrement de tension trouvé. Commencez à suivre votre tension aujourd'hui.",
+    "systolic": "Systolique",
+    "diastolic": "Diastolique",
+    "pulse": "Pouls",
+    "position": "Position",
+    "arm": "Bras",
+    "systolicPlaceholder": "Entrez la valeur systolique",
+    "diastolicPlaceholder": "Entrez la valeur diastolique",
+    "pulsePlaceholder": "Entrez le rythme cardiaque (optionnel)",
+    "invalidBloodPressureValues": "Veuillez entrer des valeurs systolique et diastolique valides",
+    "history": "Historique",
+    "positions": {
+      "sitting": "Assise",
+      "standing": "Debout",
+      "lying": "Allongée"
+    },
+    "arms": {
+      "left": "Gauche",
+      "right": "Droit"
+    },
+    "contractionTimer": "Chronomètre de Contractions",
+    "contractionTimerDescription": "Suivez le minutage de vos contractions",
+    "startContraction": "Démarrer Contraction",
+    "endContraction": "Terminer Contraction",
+    "contractionInProgress": "Contraction en cours",
+    "readyToStart": "Prêt à commencer"
+  },
   "healthTracker": {
     "title": "Suivi de Santé",
     "symptomsTitle": "Suivi des Symptômes",
