--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -153,7 +153,7 @@
     "endSession": "End Session",
     "severityLabel": "Severity (1-5)",
     "notesLabel": "Notes",
-    "notesPlaceholder": "Add any notes about this symptom...",
+    "notesPlaceholder": "Add any notes here...",
     "removeSymptom": "Remove Symptom",
     "confirmRemoveSymptom": "Are you sure you want to remove this symptom?",
     "endKickSession": "End Kick Counting Session",
@@ -186,7 +186,40 @@
     "weightPlaceholder": "Enter weight (kg)",
     "weightNotesPlaceholder": "Add any notes about this weight measurement...",
     "noWeightData": "No weight records found. Start tracking your weight today.",
-    "invalidWeightValue": "Please enter a valid weight value"
+    "invalidWeightValue": "Please enter a valid weight value",
+    "bloodPressure": "Blood Pressure",
+    "bloodPressureDescription": "Monitor your blood pressure during pregnancy",
+    "currentBloodPressure": "Current Blood Pressure",
+    "addBloodPressure": "Add Blood Pressure",
+    "editBloodPressure": "Edit Blood Pressure",
+    "deleteBloodPressure": "Delete Blood Pressure",
+    "confirmDeleteBloodPressure": "Are you sure you want to delete this blood pressure record?",
+    "noBloodPressureData": "No blood pressure records found. Start tracking your blood pressure today.",
+    "systolic": "Systolic",
+    "diastolic": "Diastolic",
+    "pulse": "Pulse",
+    "position": "Position",
+    "arm": "Arm",
+    "systolicPlaceholder": "Enter systolic value",
+    "diastolicPlaceholder": "Enter diastolic value",
+    "pulsePlaceholder": "Enter pulse rate (optional)",
+    "invalidBloodPressureValues": "Please enter valid systolic and diastolic values",
+    "history": "History",
+    "positions": {
+      "sitting": "Sitting",
+      "standing": "Standing",
+      "lying": "Lying"
+    },
+    "arms": {
+      "left": "Left",
+      "right": "Right"
+    },
+    "contractionTimer": "Contraction Timer",
+    "contractionTimerDescription": "Track the timing of your contractions",
+    "startContraction": "Start Contraction",
+    "endContraction": "End Contraction",
+    "contractionInProgress": "Contraction in progress",
+    "readyToStart": "Ready to start"
   },
   "healthTracker": {
     "title": "Health Tracker",
