Implement mood tracking features in Health Tracker
- Added MoodLog interface and integrated Redux state management for mood logs.
- Implemented asynchronous thunks for fetching, adding, updating, and deleting mood logs.
- Enhanced HealthTrackerScreen to include UI for displaying, adding, editing, and deleting mood entries.
- Updated internationalization support for mood tracking UI components in English, Spanish, and French.
- Created comprehensive mood history view with editing capabilities and integrated custom triggers for mood tracking.

--- a/bumpbuddy/src/i18n/languages/es.json
+++ b/bumpbuddy/src/i18n/languages/es.json
@@ -217,7 +217,47 @@
     "startContraction": "Iniciar Contracción",
     "endContraction": "Finalizar Contracción",
     "contractionInProgress": "Contracción en progreso",
-    "readyToStart": "Listo para empezar"
+    "readyToStart": "Listo para empezar",
+    "moodTracker": "Seguimiento de Estado de Ánimo",
+    "moodTrackerDescription": "Monitoriza tu bienestar emocional durante el embarazo",
+    "addMood": "Añadir Estado de Ánimo",
+    "editMood": "Editar Estado de Ánimo",
+    "deleteMood": "Eliminar Estado de Ánimo",
+    "confirmDeleteMood": "¿Estás segura de que quieres eliminar este registro de estado de ánimo?",
+    "noMoodData": "No se encontraron registros de estado de ánimo. Empieza a hacer un seguimiento de tu estado de ánimo hoy.",
+    "moodRating": "Valoración del Estado de Ánimo",
+    "moodType": "Tipo de Estado de Ánimo",
+    "triggers": "Desencadenantes",
+    "addTrigger": "Añadir Desencadenante",
+    "triggerPlaceholder": "Introduce un desencadenante...",
+    "moodRatingPlaceholder": "Selecciona valoración del estado de ánimo (1-5)",
+    "moodTypePlaceholder": "Selecciona o introduce el tipo de estado de ánimo",
+    "invalidMoodValues": "Por favor, selecciona una valoración y un tipo de estado de ánimo",
+    "currentMood": "Estado de Ánimo Actual",
+    "moodHistory": "Historial de Estado de Ánimo",
+    "moodNotesPlaceholder": "Añade cualquier nota sobre tu estado de ánimo...",
+    "moodTypes": {
+      "happy": "Feliz",
+      "calm": "Tranquila",
+      "anxious": "Ansiosa",
+      "sad": "Triste",
+      "irritable": "Irritable",
+      "energetic": "Enérgica",
+      "tired": "Cansada",
+      "emotional": "Emocional",
+      "stressed": "Estresada",
+      "excited": "Emocionada"
+    },
+    "commonTriggers": {
+      "sleep": "Falta de Sueño",
+      "food": "Alimentación/Hambre",
+      "hormones": "Hormonas",
+      "work": "Estrés Laboral",
+      "family": "Problemas Familiares",
+      "physical": "Malestar Físico",
+      "health": "Preocupaciones de Salud",
+      "social": "Situación Social"
+    }
   },
   "healthTracker": {
     "title": "Seguimiento de Salud",
