--- a/bumpbuddy/src/i18n/languages/fr.json
+++ b/bumpbuddy/src/i18n/languages/fr.json
@@ -217,7 +217,47 @@
     "startContraction": "Démarrer Contraction",
     "endContraction": "Terminer Contraction",
     "contractionInProgress": "Contraction en cours",
-    "readyToStart": "Prêt à commencer"
+    "readyToStart": "Prêt à commencer",
+    "moodTracker": "Suivi d'Humeur",
+    "moodTrackerDescription": "Suivez votre bien-être émotionnel pendant la grossesse",
+    "addMood": "Ajouter une Humeur",
+    "editMood": "Modifier l'Humeur",
+    "deleteMood": "Supprimer l'Humeur",
+    "confirmDeleteMood": "Êtes-vous sûr de vouloir supprimer cet enregistrement d'humeur ?",
+    "noMoodData": "Aucun enregistrement d'humeur trouvé. Commencez à suivre votre humeur aujourd'hui.",
+    "moodRating": "Niveau d'Humeur",
+    "moodType": "Type d'Humeur",
+    "triggers": "Déclencheurs",
+    "addTrigger": "Ajouter un Déclencheur",
+    "triggerPlaceholder": "Entrez un déclencheur...",
+    "moodRatingPlaceholder": "Sélectionnez le niveau d'humeur (1-5)",
+    "moodTypePlaceholder": "Sélectionnez ou entrez le type d'humeur",
+    "invalidMoodValues": "Veuillez sélectionner un niveau et un type d'humeur",
+    "currentMood": "Humeur Actuelle",
+    "moodHistory": "Historique d'Humeur",
+    "moodNotesPlaceholder": "Ajoutez des notes sur votre humeur...",
+    "moodTypes": {
+      "happy": "Heureuse",
+      "calm": "Calme",
+      "anxious": "Anxieuse",
+      "sad": "Triste",
+      "irritable": "Irritable",
+      "energetic": "Énergique",
+      "tired": "Fatiguée",
+      "emotional": "Émotive",
+      "stressed": "Stressée",
+      "excited": "Excitée"
+    },
+    "commonTriggers": {
+      "sleep": "Manque de Sommeil",
+      "food": "Alimentation/Faim",
+      "hormones": "Hormones",
+      "work": "Stress au Travail",
+      "family": "Problèmes Familiaux",
+      "physical": "Inconfort Physique",
+      "health": "Préoccupations de Santé",
+      "social": "Situation Sociale"
+    }
   },
   "healthTracker": {
     "title": "Suivi de Santé",
