--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -219,7 +219,47 @@
     "startContraction": "Start Contraction",
     "endContraction": "End Contraction",
     "contractionInProgress": "Contraction in progress",
-    "readyToStart": "Ready to start"
+    "readyToStart": "Ready to start",
+    "moodTracker": "Mood Tracker",
+    "moodTrackerDescription": "Track your emotional wellbeing during pregnancy",
+    "addMood": "Add Mood",
+    "editMood": "Edit Mood",
+    "deleteMood": "Delete Mood",
+    "confirmDeleteMood": "Are you sure you want to delete this mood record?",
+    "noMoodData": "No mood records found. Start tracking your mood today.",
+    "moodRating": "Mood Rating",
+    "moodType": "Mood Type",
+    "triggers": "Triggers",
+    "addTrigger": "Add Trigger",
+    "triggerPlaceholder": "Enter a trigger...",
+    "moodRatingPlaceholder": "Select mood rating (1-5)",
+    "moodTypePlaceholder": "Select or enter mood type",
+    "invalidMoodValues": "Please select a mood rating and type",
+    "currentMood": "Current Mood",
+    "moodHistory": "Mood History",
+    "moodNotesPlaceholder": "Add any notes about your mood...",
+    "moodTypes": {
+      "happy": "Happy",
+      "calm": "Calm",
+      "anxious": "Anxious",
+      "sad": "Sad",
+      "irritable": "Irritable",
+      "energetic": "Energetic",
+      "tired": "Tired",
+      "emotional": "Emotional",
+      "stressed": "Stressed",
+      "excited": "Excited"
+    },
+    "commonTriggers": {
+      "sleep": "Poor Sleep",
+      "food": "Food/Hunger",
+      "hormones": "Hormones",
+      "work": "Work Stress",
+      "family": "Family Issues",
+      "physical": "Physical Discomfort",
+      "health": "Health Concerns",
+      "social": "Social Situation"
+    }
   },
   "healthTracker": {
     "title": "Health Tracker",
