Implement exercise tracking features in Health Tracker
- Added ExerciseLog interface and integrated Redux state management for exercise logs.
- Implemented asynchronous thunks for fetching, adding, updating, and deleting exercise logs.
- Enhanced HealthTrackerScreen to include UI for recording exercise type, duration, intensity, and heart rate, along with pregnancy-related tracking for modified positions and discomfort.
- Created exercise history view with editing capabilities and ensured proper internationalization support for exercise tracking in English, Spanish, and French.
- Updated progress documentation to reflect the addition of exercise tracking functionalities.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -292,7 +292,41 @@
       "anxiety": "Anxiety/Stress",
       "noise": "Noise/Environment",
       "partner": "Partner Disruption"
-    }
+    },
+    "exerciseTracker": "Exercise Tracker",
+    "exerciseTrackerDescription": "Track your exercise and physical activity during pregnancy",
+    "addExercise": "Add Exercise",
+    "editExercise": "Edit Exercise",
+    "deleteExercise": "Delete Exercise",
+    "confirmDeleteExercise": "Are you sure you want to delete this exercise log?",
+    "exerciseHistory": "Exercise History",
+    "noExerciseData": "No exercise data recorded yet",
+    "exerciseType": "Exercise Type",
+    "exerciseTypes": {
+      "walking": "Walking",
+      "swimming": "Swimming",
+      "yoga": "Prenatal Yoga",
+      "stretching": "Stretching",
+      "pilates": "Pilates",
+      "cycling": "Stationary Cycling",
+      "strength": "Light Strength Training",
+      "dance": "Dance",
+      "water": "Water Aerobics",
+      "other": "Other"
+    },
+    "intensity": "Intensity",
+    "heartRate": "Heart Rate",
+    "bpm": "BPM",
+    "heartRatePlaceholder": "Enter heart rate (optional)",
+    "modifiedPositions": "Modified Positions",
+    "modifiedPositionsHint": "Did you modify positions for pregnancy?",
+    "feltContractions": "Felt Contractions",
+    "feltDiscomfort": "Felt Discomfort",
+    "exerciseWarning": "Always consult your healthcare provider before starting any new exercise regimen during pregnancy.",
+    "yes": "Yes",
+    "no": "No",
+    "exerciseNotesPlaceholder": "Add any notes about your exercise...",
+    "invalidExerciseValues": "Please enter a valid exercise type and duration"
   },
   "healthTracker": {
     "title": "Health Tracker",
