Enhance Language Switcher and Internationalization Support
- Integrated react-native-element-dropdown for a more customizable language selection experience in the LanguageSwitcher component.
- Updated language files (English, Spanish, French) to include new keys for user details and language settings.
- Modified ProfileScreen to include a LanguageSwitcher for improved user experience in selecting preferred languages.
- Added name input field in ProfileScreen for user profile updates, enhancing user details management.
- Updated authService to support profile updates with name, due date, and pregnancy week.
- Improved overall UI consistency and accessibility across components.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -82,13 +82,19 @@
     "changePassword": "Change Password",
     "logOut": "Log Out",
     "settings": "Settings",
+    "name": "Name",
+    "namePlaceholder": "Enter your name",
+    "userDetails": "User Details",
+    "languageSettings": "Language Settings",
+    "selectYourLanguage": "Choose your preferred language",
     "profileUpdated": "Profile updated at",
     "realtimeConnected": "Connected to Realtime",
     "realtimeConnectionFailed": "Failed to connect to Realtime",
     "realtimeError": "Error connecting to Realtime",
     "profileUpdateSuccess": "Profile updated successfully",
     "profileUpdateError": "Failed to update profile",
-    "realtime": "Realtime"
+    "realtime": "Realtime",
+    "notSet": "Not set"
   },
   "home": {
     "welcome": "Welcome, {{name}}!",
