--- a/bumpbuddy/src/i18n/languages/es.json
+++ b/bumpbuddy/src/i18n/languages/es.json
@@ -76,19 +76,25 @@
   "profile": {
     "title": "Mi Perfil",
     "personalInfo": "Información Personal",
-    "dueDate": "Fecha Prevista del Parto",
+    "dueDate": "Fecha de Parto",
     "pregnancyWeek": "Semana de Embarazo",
     "editProfile": "Editar Perfil",
     "changePassword": "Cambiar Contraseña",
     "logOut": "Cerrar Sesión",
     "settings": "Configuración",
-    "profileUpdated": "Perfil actualizado el",
-    "realtimeConnected": "Conectado a Tiempo Real",
-    "realtimeConnectionFailed": "Error al conectar con Tiempo Real",
-    "realtimeError": "Error al conectar con Tiempo Real",
+    "name": "Nombre",
+    "namePlaceholder": "Ingresa tu nombre",
+    "userDetails": "Datos del Usuario",
+    "languageSettings": "Configuración de Idioma",
+    "selectYourLanguage": "Elige tu idioma preferido",
+    "profileUpdated": "Perfil actualizado a las",
+    "realtimeConnected": "Conectado a Realtime",
+    "realtimeConnectionFailed": "Error al conectar a Realtime",
+    "realtimeError": "Error al conectar a Realtime",
     "profileUpdateSuccess": "Perfil actualizado con éxito",
     "profileUpdateError": "Error al actualizar el perfil",
-    "realtime": "Tiempo Real"
+    "realtime": "Tiempo real",
+    "notSet": "No establecido"
   },
   "home": {
     "welcome": "¡Bienvenida, {{name}}!",
