--- a/bumpbuddy/src/i18n/languages/fr.json
+++ b/bumpbuddy/src/i18n/languages/fr.json
@@ -76,19 +76,25 @@
   "profile": {
     "title": "Mon Profil",
     "personalInfo": "Informations Personnelles",
-    "dueDate": "Date prévue d'accouchement",
-    "pregnancyWeek": "Semaine de grossesse",
-    "editProfile": "Modifier le profil",
-    "changePassword": "Changer le mot de passe",
-    "logOut": "Déconnexion",
+    "dueDate": "Date d'Accouchement Prévue",
+    "pregnancyWeek": "Semaine de Grossesse",
+    "editProfile": "Modifier le Profil",
+    "changePassword": "Changer le Mot de Passe",
+    "logOut": "Se Déconnecter",
     "settings": "Paramètres",
-    "profileUpdated": "Profil mis à jour le",
-    "realtimeConnected": "Connecté en temps réel",
-    "realtimeConnectionFailed": "Échec de la connexion en temps réel",
-    "realtimeError": "Erreur de connexion en temps réel",
+    "name": "Nom",
+    "namePlaceholder": "Entrez votre nom",
+    "userDetails": "Détails de l'Utilisateur",
+    "languageSettings": "Paramètres de Langue",
+    "selectYourLanguage": "Choisissez votre langue préférée",
+    "profileUpdated": "Profil mis à jour à",
+    "realtimeConnected": "Connecté à Realtime",
+    "realtimeConnectionFailed": "Échec de connexion à Realtime",
+    "realtimeError": "Erreur de connexion à Realtime",
     "profileUpdateSuccess": "Profil mis à jour avec succès",
     "profileUpdateError": "Échec de la mise à jour du profil",
-    "realtime": "Temps réel"
+    "realtime": "Temps réel",
+    "notSet": "Non défini"
   },
   "home": {
     "welcome": "Bienvenue, {{name}} !",
