Refactor LanguageFlag and PreferencesPanel for Improved UI Consistency
- Updated LanguageFlag component to utilize NativeWind for styling, enhancing dark mode compatibility and overall visual consistency.
- Refactored PreferencesPanel to streamline language and theme selection, incorporating a new PreferencesLanguageSwitcher for better user experience.
- Enhanced SafeAreaWrapper to include bottom edge support, ensuring proper layout across devices.
- Added new keys to language files for preferences management, improving internationalization support.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -387,5 +387,29 @@
     "privacyPolicyLabel": "Privacy Policy",
     "termsOfServiceLabel": "Terms of Service",
     "feedbackLabel": "Send Feedback"
+  },
+  "preferences": {
+    "title": "Preferences",
+    "themeSettings": "Theme Settings",
+    "darkMode": "Dark Mode",
+    "themeSelection": "Theme Selection",
+    "selectTheme": "Select theme",
+    "themes": {
+      "light": "Light",
+      "dark": "Dark",
+      "system": "System Default"
+    },
+    "languageSettings": "Language Settings",
+    "language": "Language",
+    "selectLanguage": "Select language",
+    "measurementSettings": "Measurement Settings",
+    "units": "Units",
+    "selectUnits": "Select units",
+    "unitTypes": {
+      "metric": "Metric (kg, cm)",
+      "imperial": "Imperial (lb, in)"
+    },
+    "syncNow": "Sync Now",
+    "syncing": "Syncing..."
   }
 }
