Implement offline functionality and network status management
- Integrated Redux for offline data persistence using redux-persist and AsyncStorage.
- Added a network detection service to monitor connectivity status in real-time.
- Created a NetworkContext for app-wide awareness of network status.
- Developed a NetworkStatusIndicator component to provide user feedback on connectivity.
- Enhanced internationalization support for network status messages in English, Spanish, and French.
- Updated navigation to handle offline capabilities and ensure seamless synchronization when connectivity is restored.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -411,5 +411,21 @@
     },
     "syncNow": "Sync Now",
     "syncing": "Syncing..."
+  },
+  "network": {
+    "online": "Online",
+    "offline": "Offline",
+    "syncPending": "Syncing {{count}} changes...",
+    "pendingSync": "{{count}} changes pending",
+    "lastOnline": "Last online",
+    "unknown": "Unknown",
+    "connectionLost": "Connection lost",
+    "connectionRestored": "Connection restored",
+    "offlineMode": "Offline mode",
+    "syncCompleted": "Sync completed",
+    "syncFailed": "Sync failed",
+    "retrying": "Retrying...",
+    "savedLocally": "Saved locally",
+    "waitingToSync": "Waiting to sync"
   }
 }
